<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <com.messages.readmms.readsmss.feature.blocking.manager.BlockingManagerPreferenceView
            android:id="@+id/qksms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_blocking_manager_qksms"
            app:summary="@string/blocking_manager_sms_summary"
            app:title="@string/blocking_manager_sms_title"
            app:widget="@layout/blocking_manager_list_option" />

        <com.messages.readmms.readsmss.feature.blocking.manager.BlockingManagerPreferenceView
            android:id="@+id/callBlocker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_blocking_manager_call_blocker"
            app:summary="@string/blocking_manager_call_blocker_summary"
            app:title="@string/blocking_manager_call_blocker_title"
            app:widget="@layout/blocking_manager_list_option" />

        <com.messages.readmms.readsmss.feature.blocking.manager.BlockingManagerPreferenceView
            android:id="@+id/callControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_blocking_manager_call_control"
            app:summary="@string/blocking_manager_call_control_summary"
            app:title="@string/blocking_manager_call_control_title"
            app:widget="@layout/blocking_manager_list_option" />

        <com.messages.readmms.readsmss.feature.blocking.manager.BlockingManagerPreferenceView
            android:id="@+id/shouldIAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_blocking_manager_sia"
            app:summary="@string/blocking_manager_sia_summary"
            app:title="@string/blocking_manager_sia_title"
            app:widget="@layout/blocking_manager_list_option" />

    </LinearLayout>

</ScrollView>
