<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/app_logo" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?attr/iconTintSolid"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <com.messages.readmms.readsmss.common.widget.MyTextView
                android:id="@+id/versionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginTop="6dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/inbox"
            style="@style/DrawerRow">

            <ImageView
                android:id="@+id/inboxIcon"
                style="@style/DrawerIcon"
                android:src="@drawable/ic_inbox_black_24dp"
                tools:tint="@color/tools_theme" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_inbox" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/archived"
            style="@style/DrawerRow">

            <ImageView
                android:id="@+id/archivedIcon"
                style="@style/DrawerIcon"
                android:src="@drawable/ic_archive_white_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_archived" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/divider" />

        <LinearLayout
            android:id="@+id/backup"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_import_export_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/backup_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scheduled"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_event_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_scheduled" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blocking"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_block_white_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_blocking" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/language"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_translate_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/change_language" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/divider" />

        <LinearLayout
            android:id="@+id/settings"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_settings_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_settings" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            style="@style/DrawerRow"
            android:visibility="gone">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_help_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_help" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/invite"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_people_black_24dp"
                app:tint="?attr/iconTintSolid"/>

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/drawer_invite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateOkay"
            style="@style/DrawerRow">

            <ImageView
                style="@style/DrawerIcon"
                android:src="@drawable/ic_star_black_24dp"
                app:tint="?attr/iconTintSolid" />

            <com.messages.readmms.readsmss.common.widget.MyTextView
                style="@style/DrawerText"
                android:text="@string/rate_us" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>