<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginVertical="@dimen/_25sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_guide_vect" />

        <com.messages.readmms.readsmss.common.widget.MyTextView
            style="@style/ToolbarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:gravity="center"
            android:text="@string/overlay_permission_for_app"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.messages.readmms.readsmss.common.widget.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/desc_overlay"
            android:textColor="?android:attr/textColorHint"
            android:textSize="@dimen/_12ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.messages.readmms.readsmss.common.widget.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:gravity="start"
            android:padding="@dimen/_10sdp"
            android:text="@string/turn_on_the_after_call_feature"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:cardBackgroundColor="@color/cardBg"
            app:cardCornerRadius="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/step_1"
                        android:textColor="@color/tools_theme"
                        android:textSize="@dimen/_12ssp" />

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:paddingVertical="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/desc_step1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/_12ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/step_2"
                        android:textColor="@color/tools_theme"
                        android:textSize="@dimen/_12ssp" />

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:paddingVertical="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/desc_step2"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/_12ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/step_3"
                        android:textColor="@color/tools_theme"
                        android:textSize="@dimen/_12ssp" />

                    <com.messages.readmms.readsmss.common.widget.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google"
                        android:gravity="start"
                        android:paddingVertical="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/desc_step3"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/_12ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_55sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_15sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnGrant"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:cardBackgroundColor="@color/tools_theme"
                app:cardCornerRadius="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/google"
                    android:gravity="center"
                    android:text="@string/grant_access"
                    android:textColor="@color/commonwhite"
                    android:textSize="@dimen/_15ssp" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/shine"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_shine"
                android:rotation="20" />

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>